# opengl-voxel-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
Libraries/include/: glad.c
Libraries/include/lodepng/: lodepng.cpp
Libraries/lib/: glfw3.lib
Shaders/: Str.vert
libraries/glad/: glad.c  glad.h  gladc.c  gladh.h  voxel_glad.c  voxel_glad.h
libraries/glad/glad/: gl.h  glad.h
libraries/lodepng/: lodepng.h
src/: Main.cpp
src/Application/: Application.cpp  Application.hpp  Callbacks.cpp  Callbacks.hpp  Definitions.cpp  Definitions.hpp  Game.cpp  Game.hpp
src/Globals/: Definitions.cpp  Definitions.hpp
src/Player/: Player.cpp  Player.hpp  PlayerDef.hpp
src/Rendering/: Frustum.cpp  Frustum.hpp  FrustumCulling.hpp  TextRenderer.cpp  TextRenderer.hpp
src/Resources/Shaders/: Blocks.frag  Blocks.vert  Border.frag  Border.vert  Cld.vert  Clouds.frag  Clouds.vert  Inv.vert  Inventory.frag  Inventory.vert  Out.frag  Outline.frag  Outline.vert  Planets.frag  Planets.vert  Sky.frag  Sky.vert  Stars.frag  Stars.vert  Test.frag  Test.vert  Text.frag  Text.vert  Txt.vert  Vec3.vert  Wld.vert
src/Resources/Shaders/Compute/: Faces.comp  Stars.comp
src/Utility/: Application.cpp  Application.hpp  Definitions.cpp  Definitions.hpp  Timer.cpp  Timer.hpp
src/World/: Chunk.cpp  Chunk.hpp  Sky.cpp  Sky.hpp  World.cpp  World.hpp
src/World/Generation/: Perlin.cpp  Perlin.hpp  Settings.cpp  Settings.hpp  Structures.cpp  Vector.hpp
